{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 284,
  "lineage": "77c476a1-532f-a532-1bef-84af5714e0de",
  "resources": [
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/regions/us-central1/networkEndpointGroups/serverless-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-12-27T08:01:52.965-08:00",
            "enable_cdn": true,
            "fingerprint": "_CwfqC_fajw=",
            "id": "projects/playground-s-11-87f68f04/global/backendServices/tf-cr-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 0
              }
            ],
            "name": "tf-cr-lb-backend-default",
            "port_name": "http",
            "project": "playground-s-11-87f68f04",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/backendServices/tf-cr-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.117.121.186",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-12-27T08:01:09.847-08:00",
            "id": "projects/playground-s-11-87f68f04/global/addresses/tf-cr-lb-address",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "name": "tf-cr-lb-address",
            "prefix_length": 0,
            "project": "playground-s-11-87f68f04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/addresses/tf-cr-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/playground-s-11-87f68f04/global/forwardingRules/tf-cr-lb",
            "ip_address": "34.117.121.186",
            "ip_protocol": "TCP",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "load_balancing_scheme": "EXTERNAL",
            "name": "tf-cr-lb",
            "port_range": "80",
            "project": "playground-s-11-87f68f04",
            "self_link": "https://www.googleapis.com/compute/beta/projects/playground-s-11-87f68f04/global/forwardingRules/tf-cr-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/targetHttpProxies/tf-cr-lb-http-proxy"
          },
          "dependencies": [
            "google_cloud_run_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/playground-s-11-87f68f04/global/forwardingRules/tf-cr-lb-https",
            "ip_address": "34.117.121.186",
            "ip_protocol": "TCP",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "load_balancing_scheme": "EXTERNAL",
            "name": "tf-cr-lb-https",
            "port_range": "443",
            "project": "playground-s-11-87f68f04",
            "self_link": "https://www.googleapis.com/compute/beta/projects/playground-s-11-87f68f04/global/forwardingRules/tf-cr-lb-https",
            "target": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/targetHttpsProxies/tf-cr-lb-https-proxy"
          },
          "dependencies": [
            "google_cloud_run_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.lb-http.google_compute_ssl_certificate.default",
            "module.lb-http.google_compute_target_https_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.random_id.certificate"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-27T08:02:26.877-08:00",
            "id": "projects/playground-s-11-87f68f04/global/targetHttpProxies/tf-cr-lb-http-proxy",
            "name": "tf-cr-lb-http-proxy",
            "project": "playground-s-11-87f68f04",
            "proxy_bind": false,
            "proxy_id": 8364992370307410429,
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/targetHttpProxies/tf-cr-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/urlMaps/tf-cr-lb-https-redirect"
          },
          "dependencies": [
            "google_cloud_run_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-27T08:02:26.866-08:00",
            "id": "projects/playground-s-11-87f68f04/global/targetHttpsProxies/tf-cr-lb-https-proxy",
            "name": "tf-cr-lb-https-proxy",
            "project": "playground-s-11-87f68f04",
            "proxy_bind": false,
            "proxy_id": 631143669202070013,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/targetHttpsProxies/tf-cr-lb-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/sslCertificates/tf-cr-lb-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/urlMaps/tf-cr-lb-url-map"
          },
          "dependencies": [
            "google_cloud_run_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.lb-http.google_compute_ssl_certificate.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.random_id.certificate"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-27T08:02:15.078-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/backendServices/tf-cr-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "yb2QaMQb7Q0=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/playground-s-11-87f68f04/global/urlMaps/tf-cr-lb-url-map",
            "map_id": 2708068430527244776,
            "name": "tf-cr-lb-url-map",
            "path_matcher": [],
            "project": "playground-s-11-87f68f04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/urlMaps/tf-cr-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_service.default",
            "google_compute_region_network_endpoint_group.serverless_neg",
            "module.lb-http.google_compute_backend_service.default"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-27T08:01:09.844-08:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "sljc2E-yr38=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/playground-s-11-87f68f04/global/urlMaps/tf-cr-lb-https-redirect",
            "map_id": 8483576481774479402,
            "name": "tf-cr-lb-https-redirect",
            "path_matcher": [],
            "project": "playground-s-11-87f68f04",
            "self_link": "https://www.googleapis.com/compute/v1/projects/playground-s-11-87f68f04/global/urlMaps/tf-cr-lb-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}